--- a/edugenai-ui/package.json
+++ b/edugenai-ui/package.json
@@ -10,14 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "@mui/material": "^5.16.0",
-    "@mui/icons-material": "^5.16.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "react-dropzone": "^14.2.3",
+    "@mui/icons-material": "^5.16.0",
+    "@mui/material": "^5.16.0",
+    "chart.js": "^4.5.0",
     "pdf-lib": "^1.17.1",
+    "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^19.1.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.4.0"
   },
   "devDependencies": {
