--- a/edugenai-ui/package.json
+++ b/edugenai-ui/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.7.1"
+    "react-router-dom": "^7.7.1",
+    "recharts": "3.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
